<resources>
    <string name="app_name">SmartTrash</string>
    <string name="smarttrash">SmartTrash</string>
    <string name="login_akun_kamu">Login akun kamu</string>
    <string name="buat_akun_kamu">Buat akun kamu</string>
    <string name="nis">NIS</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sampah">Sampah</string>
    <string name="ranking">Ranking</string>
</resources>