<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smarttrash"
        android:textAlignment="center"
        android:textColor="@color/biru_muda"
        android:textSize="24sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        android:id="@+id/tv_login_akun_kamu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/login_akun_kamu"
        android:textColor="@color/abu_tua"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0.11" />

    <EditText
        android:id="@+id/et_login_nis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:inputType="number"
        android:hint="@string/nis"
        android:textSize="16sp"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/abu_muda"
        android:background="@drawable/gray_edit_text"
        android:elevation="4dp"
        android:shadowColor="#ECECEC"
        android:shadowRadius="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_akun_kamu"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:hint="@string/password"
        android:textSize="16sp"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/abu_muda"
        android:inputType="textPassword"
        android:background="@drawable/gray_edit_text"
        android:elevation="4dp"
        android:shadowColor="#ECECEC"
        android:shadowRadius="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_nis"
        android:layout_marginTop="16dp"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_login_password"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/blue_button"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_belum_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Belum punya akun? "
        android:textAlignment="center"
        android:textColor="@color/abu_muda"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_login_ke_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="@color/biru_muda"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="textStart"
        app:layout_constraintStart_toEndOf="@id/tv_belum_punya_akun"
        app:layout_constraintTop_toTopOf="@id/tv_belum_punya_akun"/>

</androidx.constraintlayout.widget.ConstraintLayout>